test/qabort2.slq

def main(){
	x:=0:𝔹;
	y:=H(0);
	if x {
		__qabort(⊥); /// error
	} else {
		return y;
	}
}
